--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-minimal
 logo: https://bioboot.github.io/bggn213_F19/assets/img/logo.png
 title: "Bioinformatics"
